[package]
name = "rpg_game"
version = "0.0.1-a.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3 # will compile packages as optimized as posible. -> takes longer at first but the payoff is huge :)

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] } # dynamic linking to decrease compile time!
bevy-inspector-egui = "0.21.0"
bevy_turborand = "0.7.0"
bevy_ecs_tilemap = { git = "https://github.com/divark/bevy_ecs_tilemap", branch = "0.12-fixes" }
rand = "0.8.5"
rand_chacha = "0.3.1"
noise = "0.8.2"
